--- a/AboutUS/AboutUS.css
+++ b/AboutUS/AboutUS.css
@@ -300,7 +300,7 @@ html {
     all: inherit;
   }
   
-  .w-webflow-badge, .w-webflow-badge * {
+  /* .w-webflow-badge, .w-webflow-badge * {
     z-index: auto;
     visibility: visible;
     box-sizing: border-box;
@@ -386,7 +386,7 @@ html {
     vertical-align: middle !important;
     display: inline-block !important;
   }
-  
+   */
   h1, h2, h3, h4, h5, h6 {
     margin-bottom: 10px;
     font-weight: bold;
